K8SICMS/configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo
  namespace: icms-lab
  labels:
    app: configmap-demo
spec:
  containers:
    - name: app
      image: nginx:1.27
      volumeMounts:
        - name: config-volume
          mountPath: /etc/config
  volumes:
    - name: config-volume
      configMap:
        name: app-config
