K8SICMS/ingress-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icms-web
  namespace: icms-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: icms-web
  template:
    metadata:
      labels:
        app: icms-web
    spec:
      containers:
        - name: web
          image: nginx:1.27
          ports:
            - containerPort: 80
