K8SICMS/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-demo
  namespace: icms-lab
  labels:
    app: secret-demo
spec:
  containers:
    - name: app
      image: nginx:1.27
      volumeMounts:
        - name: secret-volume
          mountPath: /etc/secret
          readOnly: true
  volumes:
    - name: secret-volume
      secret:
        secretName: app-secret
