K8SICMS/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icms-web-svc
  namespace: icms-lab
spec:
  type: ClusterIP
  selector:
    app: icms-web
  ports:
    - port: 80
      targetPort: 80
