K8SICMS/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: icms-web-ingress
  namespace: icms-lab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: icms.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: icms-web-svc
                port:
                  number: 80
